--- a/style.css
+++ b/style.css
@@ -19,8 +19,7 @@ body {
 .container{
     display: grid;
     grid-template-columns: minmax(6rem, 1fr) repeat(8, minmax(min-content, 16rem)) minmax(6rem, 1fr);
-    grid-template-rows: repeat(3, min-content) 70vh
-    min-content;
+    grid-template-rows: repeat(3, min-content) 70vh repeat(5, min-content);
     gap: 1.6rem 0;
     margin-top: 1.6rem;
 }
@@ -434,6 +433,7 @@ body {
     text-transform: uppercase;
     outline: none;
     box-shadow: .2rem .2rem 1rem #777;
+    cursor: pointer;
 }
 
 .day-offer-btn:hover{
@@ -447,3 +447,68 @@ body {
     align-self: end;
 }
 /* end of day offer */
+
+/* bestselling furniture */
+.bestselling-furniture{
+    grid-column: 2 / 10;
+    grid-row: 6 / 7;
+}
+
+.bestselling-furniture-header{
+    font-size: 4.5rem;
+    color: #23487f;
+    text-align: center;
+    margin: 3rem 0;
+}
+
+.bestselling-furniture-cards{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    row-gap: 6.4rem;
+    column-gap: 6.4rem;
+}
+
+.bestselling-furniture-card{
+    background-color: #efefef;
+    box-shadow: 0 1.5rem 6rem rgba(0, 0, 0, .3);
+}
+
+.bestselling-furniture-img{
+    width: 100%;
+    border-radius: .3rem .3rem 0 0;
+}
+
+.bestselling-furniture-heading{
+    background-color: #fffddd;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-size: 2.4rem;
+    color: #458a9f;
+    padding: .5rem 0;
+    border-radius: .2rem;
+    transform: translateY(-50%);
+}
+
+.bestselling-furniture-paragraph{
+    font-size: 1.9rem;
+    color: #23487f;
+    text-align: center;
+    margin-bottom: 1.6rem;
+}
+
+.bestselling-furniture-btn{
+    width: 100%;
+    padding: 1.6rem 0;
+    background-color: #12376e;
+    font-size: 1.9rem;
+    color: #fff;
+    border: none;
+    border-radius: 0 0 .3rem .3rem;
+    cursor: pointer;
+}
+
+.bestselling-furniture-btn:hover{
+    background-color: #23487f;
+}
+/* end of bestselling furniture */
